--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,4 +1,3 @@
-doctype html
 html
   head
     title FastTalk
@@ -7,3 +6,10 @@ html
   body(ng-app ='fastTalk')
     ui-view
     block content
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js')
+    script(src='/js/client.js')
+    script(src='/js/auth/authService.js')
+    script(src='/js/auth/login/login.component.js')
+    script(src='/js/auth/signup/signup.component.js')
+    script(src='/js/welcome/welcome.component.js')
