created navbar html & component and set up layout page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,3 +13,4 @@ html
     script(src='/js/auth/login/login.component.js')
     script(src='/js/auth/signup/signup.component.js')
     script(src='/js/welcome/welcome.component.js')
+    script(src='/js/translatedPhrases/phraseIndex/userslanding.component.js')
