trying to set up translator

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,3 +14,5 @@ html
     script(src='/js/auth/signup/signup.component.js')
     script(src='/js/welcome/welcome.component.js')
     script(src='/js/translatedPhrases/phraseIndex/userslanding.component.js')
+    script(src='js/translatedPhrases/phraseNew/phraseNew.component.js')
+    script(src='js/translatedPhrases/phraseservice.js')
