--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,3 +16,4 @@ html
     script(src='/js/translatedPhrases/phraseIndex/userslanding.component.js')
     script(src='js/translatedPhrases/phraseNew/phraseNew.component.js')
     script(src='js/translatedPhrases/phraseservice.js')
+    script(src='js/translatedPhrases/phraseShow/phraseShow.component.js')
