able to get to 1 phrase to edit

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,3 +17,4 @@ html
     script(src='js/translatedPhrases/phraseNew/phraseNew.component.js')
     script(src='js/translatedPhrases/phraseservice.js')
     script(src='js/translatedPhrases/phraseShow/phraseShow.component.js')
+    script(src='js/translatedPhrases/phraseEdit/phraseEdit.component.js')
