--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,9 +1,10 @@
 html
   head
     title FastTalk
-    link(rel='stylesheet', type="text/css"   href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.css")
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Pangolin')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body(ng-app ='fastTalk')
     ui-view
